--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Задания</title>
     </head>
     <body>
+        <H1>Задания</H1>
         <script src="assets/script.js"></script>
     </body>
 </html>
